config/samples/odoo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Se você lembrar da anotação exata do cluster-issuer usada no WordPress, pode adicionar aqui. 
    # Exemplo: cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - meu-erp-app.francis.tcloud-devops.cloudtotvs.com.br
    secretName: odoo-tls-secret # O cluster gerará o certificado e salvará neste secret
  rules:
  - host: meu-erp-app.francis.tcloud-devops.cloudtotvs.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meu-erp-app
            port:
              number: 8069
